visibility issue is fixed

--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -1126,3 +1126,4 @@ http://kute-themes.com/html/boutique/html/index.html
 https://template.hasthemes.com/noraure/noraure/index.html
 https://preview.hasthemes.com/xoss-preview/xoss/index.html
 
+visibility: visible;
