--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,6 @@
 [x-cloak] {
     display: none;
 }
+.visible--item{
+    visibility: visible;
+}
